# miniboard-app

./: .eslintrc.cjs  .gitignore  .prettierrc  AUDITORIA.md  README.md  builder.config.js  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
assets/: miniboard logo.ai  miniboard-icon.afdesign
src/: App.jsx  App.scss  App.tsx  index.css  index.scss  main.jsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/: Toast.tsx  Toolbar.jsx  Toolbar.scss  Toolbar.tsx  Whiteboard.jsx  Whiteboard.scss  Whiteboard.tsx
src/contexts/: WorkspaceContext.jsx  WorkspaceContext.tsx
src/main/: BrowserWinHandler.js  index.js
src/main/boot/: index.dev.js  index.prod.js
src/renderer/: nuxt.config.js
src/renderer/.nuxt/: App.js  client.js  router.js  routes.json
src/renderer/layouts/: default.vue
src/renderer/pages/: index.vue
src/renderer/plugins/: geometry.js
src/scripts/: line.js  line.ts  sketch.js  sketch.ts
